# C-project

./: Airports.cpp  Main.cpp  Main_algo.cpp  Planes.cpp  README.md  dis_between_two_points.cpp  latitude_longitude_to_km.cpp  where_we_go.cpp
4/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  map.cpp  map.h
MERGE/: CMakeLists.txt  aircraft.h  airoport.cpp  airoport.h  airoports.cpp  airoports.h  airport.cpp  airport.h
Map/: CMakeLists.txt  main.cpp  map.cpp  map.h  map.ui
homescreen/: CMakeLists.txt
map_4/: CMakeLists.txt  customcanvas.h  mainwindow.h
